# docker_opencv

./: Dockerfile  LICENSE  README.md  docker-compose.linux.yml  docker-compose.mac.yml  docker-compose.win.yml  docker-compose.yml
scripts/: opencv.sh
workspace/src/: CMakeLists.txt  main.cpp
